[project]
name = "arby-audio3d"
version = "0.1.0"
description = "Arby Audio 3D – Cinematic-grade spatial audio engine"
authors = [{name="Your Name", email="youremail@example.com"}]
readme = "README.md"
license = {text="MIT"}
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "pydub"
]
