[project]
name = "arby-audio3d"
version = "0.1.0"
description = "Arby Audio 3D – Cinematic-grade spatial audio engine"
authors = [{name="Space-code", email="somethingsomething2726@gmail.com"}]
readme = "README.md"
license = {text="GIVEN IN github.com/space-contributes/arby-audio_3d"}
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "pydub"
]
